--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 
 h1 {
   color: var(--text-color);
-  font-size: 50px;
+  font-size: 45px;
   letter-spacing: -5px;
   margin-bottom: 20px;
 }
@@ -70,6 +70,7 @@ nav ul li {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding:20px;
 }
 
 .wb-body {
